--- a/02_Introduction to Web Hacking/02_07_SSRF.md
+++ b/02_Introduction to Web Hacking/02_07_SSRF.md
@@ -53,19 +53,19 @@ Potensi kerentanan SSRF dapat terlihat di aplikasi web dalam berbagai cara. Ber
 
 **Saat URL lengkap digunakan dalam parameter di *address bar*:**
 
-![GAMBAR5](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/956e1914b116cbc9e564e3bb3d9ab50a.png)
+![GAMBAR5](images/02_07_05.png)
 
 ***A hidden field* pada *form*:**
 
-![GAMBAR6](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/237696fc8e405d25d4fc7bbcc67919f0.png)
+![GAMBAR6](images/02_07_06.png)
 
 **URL parsial seperti hanya nama host:**
 
-![GAMBAR7](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/f3c387849e91a4f15a7b59ff7324be75.png)
+![GAMBAR7](images/02_07_07.png)
 
 **Atau mungkin hanya *path* di URL:**
 
-![GAMBAR8](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/3fd583950617f7a3713a107fcb4cfa49.png)
+![GAMBAR8](images/02_07_08.png)
 
 Beberapa contoh ini lebih mudah dieksploitasi daripada yang lain, dan di sinilah banyak percobaan dan kesalahan akan diperlukan untuk menemukan *payload* yang berfungsi.
 
@@ -95,27 +95,27 @@ Diketahui terdapat dua penemuan *endpoint yang mencurigakan.* Yang pertama adal
 
 Pertama, buat akun pelanggan dan masuk. Setelah masuk, kunjungi  [https://LAB_WEB_URL.p.thmlabs.com/customers/new-account-page](https://lab_web_url.p.thmlabs.com/customers/new-account-page) untuk melihat fitur pemilihan avatar baru. Dengan melihat *page source* formulir avatar, kita dapat melihat nilai bidang formulir avatar berisi *path* ke gambar. *Background-image style* dapat mengonfirmasi ini di elemen `DIV` di atas sesuai gambar di bawah ini:
 
-![GAMBAR9](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/bd9ee9ac0b7592b5343cbc8dd9b57189.png)
+![GAMBAR9](images/02_07_09.png)
 
 Jika kita memilih salah satu avatar dan kemudian mengklik tombol  **Update Avatar**, kita akan melihat formulir berubah dan, di atasnya, menampilkan avatar yang kita pilih saat ini. Melihat sumber halaman akan menunjukkan avatar kita saat ini ditampilkan menggunakan skema URI data, dan konten gambar dikodekan base64 sesuai gambar di bawah.
 
-![GAMBAR10](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/fff0ea113602635dcf5d1e8d0b1d8bca.png)
+![GAMBAR10](images/02_07_10.png)
 
 ekarang mari kita coba membuat permintaan lagi tetapi mengubah *avatar value* menjadi `private` **dengan harapan server akan mengakses sumber daya dan melewati blok alamat IP. Untuk melakukan ini, pertama-tama, klik kanan pada salah satu *radio buttons* pada form avatar dan pilih **Inspect** :
 
-![GAMBAR11](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/2ef87608418e47625bedad9d0361ed08.png)
+![GAMBAR11](images/02_07_11.png)
 
 Kemudian, edit `value` *radio buttons* tersebut ke `private` :
 
-![GAMBAR12](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/a1712298679cc642d792d935b14effe5.png)
+![GAMBAR12](images/02_07_12.png)
 
 Dan kemudian klik tombol ***Update Avatar*** . Sayangnya, sepertinya aplikasi web memiliki daftar penolakan dan telah memblokir akses ke `/private` *endpoint*.
 
-![GAMBAR13](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/a59460cc19eaf5776ee8a882e25b2d64.png)
+![GAMBAR13](images/02_07_13.png)
 
 Seperti yang kita lihat dari pesan kesalahan, jalur tidak dapat dimulai dengan `/private`, lalu gunakan cara lain. Kita dapat menggunakan cara *directory traversal* untuk mencapai *endpoint* yang kita inginkan. Coba atur *avatar value* ke `x/../private`**.**
 
-![GAMBAR14](https://tryhackme-images.s3.amazonaws.com/user-uploads/5efe36fb68daf465530ca761/room-content/84b88d9c6fa6a29450520625bb42870d.png)
+![GAMBAR14](images/02_07_14.png)
 
 Kita akan melihat bahwa kita sekarang telah melewati aturan, dan pengguna memperbarui avatar. Cara ini berhasil karena ketika server web menerima permintaan untuk `x/../private` , ia mengetahui bahwa  string `../`  berarti naik ke direktori yang sekarang menerjemahkan permintaan menjadi hanya  `/private` .
 
